# hzcp

./: INSIGHTS.md  README.md  pyproject.toml
app/: cli.py
app/extract/: intervals.py  parse.py  pipeline.py  regexes.py  rollups.py
app/io/: csvio.py  fs.py
app/model/: events.py
app/report/: charts.py  html_assets.py  insights.py  nodes.py  pipeline.py  render.py
example/: cp-report.html  cp_events.csv  cp_intervals.csv  cp_rollups_group.csv  cp_rollups_node.csv
