[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hzcp"
version = "0.1.0"
description = "Hazelcast CP log extractor/report"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.scripts]
hzcp = "app.cli:main"